--- a/asset/styles/layout/_container.scss
+++ b/asset/styles/layout/_container.scss
@@ -109,7 +109,7 @@
   }
 }
 
-@media (max-width: 375px) { 
+@media (max-width: 767px) {
   .container {
     max-width: 300px;
     width: 100%;
@@ -120,11 +120,12 @@
       align-items: center;
       margin-bottom: 50px;
       .container-left {
-        width: 90%;
+        width: 100%;
+        text-align: center;
         .title {
-          font-size: 3rem;
+          font-size: 2.5rem;
           color: $color4;
-          width: 80%;
+          width: 100%;
           margin-bottom: 20px;
         }
         .text-title {
@@ -134,8 +135,6 @@
           width: 80%;
         }
       }
-      
-      
 
       //   CONTAINER RIGHT
       .container-right {
