--- a/asset/styles/layout/_container.scss
+++ b/asset/styles/layout/_container.scss
@@ -118,10 +118,12 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin-bottom: 50px;
+      margin-bottom: 40px;
+
       .container-left {
         width: 100%;
         text-align: center;
+        margin-bottom: 30px;
         .title {
           font-size: 2.5rem;
           color: $color4;
@@ -130,42 +132,24 @@
         }
         .text-title {
           color: $color1;
-          font-size: 15px;
+          font-size: 16px;
           font-weight: 500;
-          width: 80%;
+          width: 100%;
         }
       }
 
       //   CONTAINER RIGHT
       .container-right {
-        width: 50%;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        align-items: flex-end;
-        .notice1-container {
-          display: flex;
-          width: 100%;
-          justify-content: flex-start;
-        }
-        .notice2-container {
-          width: 100%;
-          display: flex;
-          justify-content: center;
-        }
-        .notice3-container {
-          width: 100%;
-          display: flex;
-          justify-content: flex-end;
-        }
+        width: 100%;
+        gap: 10px;
+
         .notice {
           width: 350px;
           background: $color2;
-          padding: 10px 20px;
-          gap: 20px;
+          padding: 15px 20px;
           border-radius: 5px;
-          display: flex;
-          align-items: center;
+          flex-direction: column;
+          gap: 10px;
         }
 
         p {
@@ -182,12 +166,12 @@
     //   CONTAINER BOTTOM
 
     .container-bottom {
-      display: flex;
       color: $color3;
-      gap: 15px;
+      gap: 10px;
       font-size: 15px;
       font-weight: 500;
-      height: 220px;
+      height: auto;
+      flex-direction: column;
       .name-container {
         display: flex;
         gap: 20px;
@@ -201,21 +185,13 @@
       .card2,
       .card3 {
         background: $color4;
-        padding: 20px;
-        width: 33%;
+        padding: 27px;
+        gap: 30px;
         border-radius: 5px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
         flex: 1;
         height: 190px;
       }
-      .card2 {
-        align-self: center;
-      }
-      .card3 {
-        align-self: flex-end;
-      }
+
       img {
         border-radius: 1000px;
         height: 30px;
