--- a/style.css
+++ b/style.css
@@ -141,11 +141,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
   }
   .container .container-top .container-left {
     width: 100%;
     text-align: center;
+    margin-bottom: 30px;
   }
   .container .container-top .container-left .title {
     font-size: 2.5rem;
@@ -155,40 +156,21 @@
   }
   .container .container-top .container-left .text-title {
     color: hsl(303, 10%, 53%);
-    font-size: 15px;
+    font-size: 16px;
     font-weight: 500;
-    width: 80%;
+    width: 100%;
   }
   .container .container-top .container-right {
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: flex-end;
-  }
-  .container .container-top .container-right .notice1-container {
-    display: flex;
     width: 100%;
-    justify-content: flex-start;
-  }
-  .container .container-top .container-right .notice2-container {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-  }
-  .container .container-top .container-right .notice3-container {
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
+    gap: 10px;
   }
   .container .container-top .container-right .notice {
     width: 350px;
     background: hsl(300, 24%, 96%);
-    padding: 10px 20px;
-    gap: 20px;
+    padding: 15px 20px;
     border-radius: 5px;
-    display: flex;
-    align-items: center;
+    flex-direction: column;
+    gap: 10px;
   }
   .container .container-top .container-right p {
     font-size: 15px;
@@ -199,12 +181,12 @@
     width: 15px;
   }
   .container .container-bottom {
-    display: flex;
     color: hsl(0, 0%, 100%);
-    gap: 15px;
+    gap: 10px;
     font-size: 15px;
     font-weight: 500;
-    height: 220px;
+    height: auto;
+    flex-direction: column;
   }
   .container .container-bottom .name-container {
     display: flex;
@@ -218,20 +200,11 @@
   .container .container-bottom .card2,
   .container .container-bottom .card3 {
     background: hsl(300, 43%, 22%);
-    padding: 20px;
-    width: 33%;
+    padding: 27px;
+    gap: 30px;
     border-radius: 5px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
     flex: 1;
     height: 190px;
-  }
-  .container .container-bottom .card2 {
-    align-self: center;
-  }
-  .container .container-bottom .card3 {
-    align-self: flex-end;
   }
   .container .container-bottom img {
     border-radius: 1000px;
