--- a/style.css
+++ b/style.css
@@ -205,6 +205,7 @@
     border-radius: 5px;
     flex: 1;
     height: 190px;
+    width: 100%;
   }
   .container .container-bottom img {
     border-radius: 1000px;
